--- a/ubuntu/cuda-devel/Dockerfile
+++ b/ubuntu/cuda-devel/Dockerfile
@@ -5,36 +5,10 @@ RUN mkdir /workspace
 WORKDIR /workspace
 
 RUN apt-get update && apt-get install -y \
-    make \
-    gcc \
-    git \
-    unzip \
-    vim \
-    wget \
-    curl \
-    xz-utils \
-    libffi-dev \
-    libglvnd-dev \
-    libgstreamer1.0-dev \
-    libgstreamer-plugins-base1.0-dev \
-    liblzma-dev \
-    libncurses5-dev \
-    libncursesw5-dev \
-    libbz2-dev \
-    libreadline-dev \
-    libsm6 \
-    libsqlite3-dev \
-    libssl-dev \
-    libxcb-icccm4 \
-    libxcb-image0 \
-    libxcb-keysyms1 \
-    libxcb-render-util0 \
-    libxext6 \
-    libxkbcommon-x11-0 \
-    llvm \
-    tk-dev \
-    zlib1g-dev \
-    ffmpeg
+    gcc g++ git zip vim curl make wget gnupg openssh-server \
+    libgl1 libglib2.0-0 libpython3-dev libusb-1.0-0 \
+    libbz2-dev libncurses5-dev libffi-dev libreadline-dev \
+    libssl-dev
 
 ENV PYENV_ROOT=/root/.pyenv
 ENV PATH=$PYENV_ROOT/shims:$PYENV_ROOT/bin:$PATH
@@ -48,4 +22,4 @@ RUN curl https://pyenv.run | bash \
     && pyenv install $PYTHON_VERSION \
     && pyenv global $PYTHON_VERSION
 
-EXPOSE 6006 8888
+ENTRYPOINT service ssh restart && bash
