--- a/ubuntu/pytorch-devel/Dockerfile
+++ b/ubuntu/pytorch-devel/Dockerfile
@@ -1,12 +1,7 @@
-FROM winstr/repo:ubuntu-trt-runtime
+FROM winstr/linux:ubuntu-tensorrt-devel
 ENV DEBIAN_FRONTEND=noninteractive
-
-ENV PYENV_ROOT=/root/.pyenv
-ENV PATH=$PYENV_ROOT/shims:$PYENV_ROOT/bin:$PATH
 
 RUN eval "$(pyenv init -)" && \
     pip3 install --upgrade pip && \
     pip3 install lit && \
     pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
-
-EXPOSE 6006 8888
