--- a/ubuntu/tensorrt-devel/Dockerfile
+++ b/ubuntu/tensorrt-devel/Dockerfile
@@ -1,4 +1,4 @@
-FROM winstr/repo:ubuntu-cuda-devel
+FROM winstr/linux:ubuntu-cuda-devel
 ENV DEBIAN_FRONTEND=noninteractive
 
 # Install Tensor RT
@@ -11,12 +11,7 @@ RUN wget https://developer.nvidia.com/downloads/compute/machine-learning/tensorr
     cp /var/nv-tensorrt-local-repo-${os}-${tag}/*-keyring.gpg /usr/share/keyrings/ && \
     apt-get update -y && apt-get install -y tensorrt && \
     rm -rf nv-tensorrt-local-repo-${os}-${tag}_1.0-1_amd64.deb
-    
-ENV PYENV_ROOT=/root/.pyenv
-ENV PATH=$PYENV_ROOT/shims:$PYENV_ROOT/bin:$PATH
 
 RUN eval "$(pyenv init -)" && \
     pip3 install --upgrade pip && \
     pip3 install --upgrade tensorrt
-
-EXPOSE 6006 8888
